--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -3,5 +3,42 @@
 .homePage {
   height: 100vh;
   width: 100vw;
-  background-color: $background-light;
+  background-color: white;
+
+  .homeMain {
+    padding: 2.5rem 1.5rem;
+    height: 100%;
+    width: 82%;
+    margin-left: 18%;
+    box-sizing: border-box;
+
+    .homeHead {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .homeTitle {
+        color: black;
+        font-size: 2rem;
+        font-weight: 600;
+      }
+    }
+
+    .homeBody {
+      background-color: $background-light;
+      width: 100%;
+      height: 90%;
+      margin: 1rem auto;
+      border: 1px dashed black;
+      border-radius: 10px;
+
+      .projectCards {
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        gap: 0.4rem;
+        padding: 1rem;
+        margin: 0 auto;
+      }
+    }
+  }
 }
