--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -4,7 +4,8 @@
   background-color: $theme-color-2;
   border-radius: 5px;
   color: white;
-  padding: 1rem 2rem;
-  width: 8rem;
+  padding: 0.6rem 2rem;
+  width: 7rem;
   font-size: 0.8rem;
+  cursor: pointer;
 }
