--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ $theme-color-1: #235e4a;
 $theme-color-2: #39b54a;
 $theme-color-3: #E6F2EA;
 $background-light: #f8fcff;
+$theme-blue: #3779B9;
 
 $font-1: "Lexend";
 
