--- a/src/pages/Auth/styles.module.scss
+++ b/src/pages/Auth/styles.module.scss
@@ -3,5 +3,56 @@
 .authPage {
   height: 100vh;
   width: 100vw;
-  background-color: $background-light;
+  background-color: $theme-color-3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+
+  .authFormCnt {
+    height: 80%;
+    width: 80%;
+    box-shadow: 3px 3px 10px 4px rgba(12, 12, 12, 0.518);
+    border-radius: 10px;
+    display: flex;
+    background-color: $background-light;
+
+    .formHero {
+      width: 40%;
+      height: 100%;
+
+      img {
+        width: 60%;
+        object-fit: contain;
+        margin: 2rem;
+      }
+
+      .earthLogo {
+        box-shadow: 3px 3px 10px 4px rgba(12, 12, 12, 0.518);
+        border-radius: 50%;
+        position: relative;
+        right: -3rem;
+      }
+
+      .tagline {
+        margin: 3rem;
+        font-size: 2.4rem;
+        font-weight: 400;
+
+        span {
+          font-weight: 700;
+          color: $theme-color-1;
+        }
+      }
+    }
+
+    .formMain {
+      background-color: $theme-color-1;
+      color: white;
+      width: 60%;
+      height: 100%;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  }
 }
