--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -39,6 +39,86 @@
         padding: 1rem;
         margin: 0 auto;
       }
+
+      .dataChart {
+        margin: 0 4rem;
+
+        .chartHead {
+          display: flex;
+          justify-content: space-between;
+
+          .chartTitle {
+            display: flex;
+
+            .name {
+              position: relative;
+              margin-right: 4rem;
+
+              &::before {
+                content: "";
+                width: 12px;
+                height: 12px;
+                background-color: $theme-color-1;
+                position: absolute;
+                top: 0.3rem;
+                left: -1.2rem;
+                z-index: 2;
+                border-radius: 50%;
+              }
+            }
+
+            .name2 {
+              position: relative;
+              margin-right: 4rem;
+
+              &::before {
+                content: "";
+                width: 12px;
+                height: 12px;
+                background-color: $theme-blue;
+                position: absolute;
+                top: 0.3rem;
+                left: -1.2rem;
+                z-index: 2;
+                border-radius: 50%;
+              }
+            }
+          }
+        }
+
+        .chartBody {
+          margin: 4rem auto;
+          display: grid;
+          grid-template-columns: auto;
+          row-gap: 3rem;
+          width: 90%;
+          position: relative;
+
+          .chartLine {
+            width: 100%;
+            height: 2px;
+            background-color: rgba(0, 0, 0, 0.185);
+
+            div {
+              position: relative;
+              top: -1rem;
+              left: -3rem;
+              text-align: right;
+              width: 2rem;
+            }
+          }
+
+          .barchartCnt {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            display: flex;
+            justify-content: space-around;
+          }
+        }
+      }
     }
   }
 }
